# portalpfk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  settings.json
src/: fordiplom.py  greetings.py  home.py  main-dev.py  main.py  navbar.py  pages.py  parser.py  settings.py  settings_utils.py
