[project]
name = "Portal.PFK.NUK"
version = "1.0.0"
description = "Утиліта для легкого доступу до студентських сервісів"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "xdenotte"}
]
dependencies = [
  "flet==0.27.6",
  "bs4",
  "httpx"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "the.goddess"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "PortalPFK"

# company name to display in about app dialogs
company = "TheGoddess"

[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.27.4",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}

[tool.flet.android.permission]
"android.permission.INTERNET" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true

[tool.flet.android.app.startup_screen]
show = true
message = "Завантаження додатку та бібліотек..."

[tool.flet.android]
split_per_abi = true
